<resources>
    <string name="app_name">Unit Converter (Java)</string>
    <string name="enter_value_hint">Enter value</string>
    <string name="from_label">From:</string>
    <string name="to_label">To:</string>
    <string name="convert_button_text">Convert</string>
    <string name="result_placeholder">Result</string>
    <string name="error_invalid_input">Please enter a valid number.</string>
    <string name="error_same_unit">Cannot convert to the same unit.</string>

    <string-array name="length_units">
        <item>Metre</item>
        <item>Millimetre</item>
        <item>Mile</item>
        <item>Foot</item>
    </string-array>
</resources>